Partial work on cleanup