@@ -53,87 +53,22 @@ public class WordNet implements Serializable {
      * will be compiled to Pattern objects for use in the methods in
      * this file.
      */
-    public static final String[] regexPatternStrings =
-            {
-                    // 0: WordNet.processPointers()
-                    "^\\s*\\d\\d\\s\\S\\s\\d\\S\\s",
 
-                    // 1: WordNet.processPointers()
-                    "^([a-zA-Z0-9'._\\-]\\S*)\\s([0-9a-f])\\s",
+    private static final Map<String, String> wnFilenames = Map.ofEntries(
+            Map.entry("noun_mappings", "WordNetMappings30-noun.txt"),
+            Map.entry("verb_mappings", "WordNetMappings30-verb.txt"),
+            Map.entry("adj_mappings", "WordNetMappings30-adj.txt"),
+            Map.entry("adv_mappings", "WordNetMappings30-adv.txt"),
+            Map.entry("noun_exceptions", "noun.exc"),
+            Map.entry("verb_exceptions", "verb.exc"),
+            Map.entry("adj_exceptions", "adj.exc"),
+            Map.entry("adv_exceptions", "adv.exc"),
+            Map.entry("sense_indexes", "index.sense"),
+            Map.entry("word_frequencies", "wordFrequencies.txt"),
+            Map.entry("cntlist", "cntlist"),
+            Map.entry("stopwords", "stopwords.txt"),
+            Map.entry("messages", "messages.txt"));
 
-                    // 2: WordNet.processPointers()
-                    "^...\\s",
-
-                    // 3: WordNet.processPointers()
-                    "^(\\S\\S?)\\s([0-9]{8})\\s(.)\\s([0-9a-f]{4})\\s?",
-
-                    // 4: WordNet.processPointers()
-                    "^..\\s",
-
-                    // 5: WordNet.processPointers()
-                    "^\\+\\s(\\d\\d)\\s(\\d\\d)\\s?",
-
-                    // 6: WordNet.readNouns()
-                    "^([0-9]{8})([\\S\\s]+)\\|\\s([\\S\\s]+?)\\s(\\(?\\&\\%\\S+[\\S\\s]+)$",
-
-                    // 7: WordNet.readNouns()
-                    "^([0-9]{8})([\\S\\s]+)\\|\\s([\\S\\s]+)$",
-
-                    // 8: WordNet.readNouns()
-                    "(\\S+)\\s+(\\S+)",
-
-                    // 9: WordNet.readNouns()
-                    "(\\S+)\\s+(\\S+)\\s+(\\S+)",
-
-                    // 10: WordNet.readVerbs()
-                    "^([0-9]{8})([^\\|]+)\\|\\s([\\S\\s]+?)\\s(\\(?\\&\\%\\S+[\\S\\s]+)$",
-
-                    // 11: WordNet.readVerbs()
-                    "^([0-9]{8})([^\\|]+)\\|\\s([\\S\\s]+)$",
-
-                    // 12: WordNet.readVerbs()
-                    "(\\S+)\\s+(\\S+).*",
-
-                    // 13: WordNet.readAdjectives()
-                    "^([0-9]{8})([\\S\\s]+)\\|\\s([\\S\\s]+?)\\s(\\(?\\&\\%\\S+[\\S\\s]+)$",
-
-                    // 14: WordNet.readAdjectives()
-                    "^([0-9]{8})([\\S\\s]+)\\|\\s([\\S\\s]+)$",
-
-                    // 15: WordNet.readAdverbs()
-                    "^([0-9]{8})([\\S\\s]+)\\|\\s([\\S\\s]+)\\s(\\(?\\&\\%\\S+[\\S\\s]+)$",
-
-                    // 16: WordNet.readAdverbs()
-                    "^([0-9]{8})([\\S\\s]+)\\|\\s([\\S\\s]+)$",
-
-                    // 17: WordNet.readWordFrequencies()
-                    "^Word: ([^ ]+) Values: (.*)",
-
-                    // 18: WordNet.readSenseIndex()
-                    "([^%]+)%([^:]*):([^:]*):([^:]*)?:([^:]*)?:([^ ]*)? ([^ ]+)? ([^ ]+).*",
-
-                    // 19: WordNet.removePunctuation()
-                    "(\\w)\\'re",
-
-                    // 20: WordNet.removePunctuation()
-                    "(\\w)\\'m",
-
-                    // 21: WordNet.removePunctuation()
-                    "(\\w)n\\'t",
-
-                    // 22: WordNet.removePunctuation()
-                    "(\\w)\\'ll",
-
-                    // 23: WordNet.removePunctuation()
-                    "(\\w)\\'s",
-
-                    // 24: WordNet.removePunctuation()
-                    "(\\w)\\'d",
-
-                    // 25: WordNet.removePunctuation()
-                    "(\\w)\\'ve"
-            };
-    private static final Map<String, String> wnFilenames = new HashMap<>();
     public static boolean disable = false;
     public static boolean debug = false;
     public static WordNet wn = new WordNet();
@@ -147,7 +82,7 @@ public class WordNet implements Serializable {
      * will be used by methods in this file.
      */
     public static Pattern[] regexPatterns = null;
-    public static List<String> VerbFrames = new ArrayList<String>(Arrays.asList("", // empty 0 index
+    public static List<String> VerbFrames = List.of("", // empty 0 index
             "Something ----s",                                      // 1
             "Somebody ----s",
             "It is ----ing",
@@ -182,7 +117,7 @@ public class WordNet implements Serializable {
             "Somebody ----s INFINITIVE",
             "Somebody ----s VERB-ing",
             "It ----s that CLAUSE",
-            "Something ----s INFINITIVE"));                         // 35
+            "Something ----s INFINITIVE");                         // 35
     public Map<String, Set<String>> nounSynsetHash = new HashMap<>();   // Words in root form are String keys,
     public Map<String, Set<String>> verbSynsetHash = new HashMap<>();   // String values are 8-digit synset lists.
     public Map<String, Set<String>> adjectiveSynsetHash = new HashMap<>();
@@ -476,7 +411,6 @@ public class WordNet implements Serializable {
         try {
             wn = new WordNet();
             wn.makeFileMap();
-            wn.compileRegexPatterns();
 
             wn.readNouns();
             wn.readVerbs();
@@ -624,8 +558,7 @@ public class WordNet implements Serializable {
 
         String line = "01522276 35 v 04 wind 6 wrap 2 roll 0 twine 3 013 @ 01850315 v 0000 + 03150232 n 0303 + 07441619 n 0303 ^ 00435688 v 0301 ^ 00435688 v 0202 + 04586421 n 0101 + 10781984 n 0101 ! 01523654 v 0101 ~ 01522878 v 0000 ~ 01523105 v 0000 ~ 01523270 v 0000 ~ 01523401 v 0000 ~ 01523986 v 0000 01 + 21 00 | arrange or or coil around; \"roll your hair around your finger\"; \"Twine the thread around the spool\"; \"She wrapped her arms around the child\" &%Motion+";
         // 10: p = Pattern.compile("^([0-9]{8})([^\\|]+)\\|\\s([\\S\\s]+?)\\s(\\(?\\&\\%\\S+[\\S\\s]+)$");
-        WordNet.wn.compileRegexPatterns();
-        Matcher m = regexPatterns[10].matcher(line);
+        Matcher m = WordNetRegexPatterns.regexPatterns10.matcher(line);
         if (m.matches()) {
             //verbDocumentationHash.put(m.group(1),m.group(3));
             //addSUMOMapping(m.group(4),"2" + m.group(1));
@@ -727,23 +660,6 @@ public class WordNet implements Serializable {
     }
 
     /**
-     * This method compiles all of the regular expression pattern
-     * strings in regexPatternStrings and puts the resulting compiled
-     * Pattern objects in the Pattern[] regexPatterns.
-     */
-    public void compileRegexPatterns() {
-
-        System.out.println("INFO in WordNet.compileRegexPatterns(): compiling patterns");
-        regexPatterns = new Pattern[regexPatternStrings.length];
-        for (int i = 0; i < regexPatternStrings.length; i++) {
-            regexPatterns[i] = Pattern.compile(regexPatternStrings[i]);
-            if (!(regexPatterns[i] instanceof Pattern))
-                System.out.println("ERROR in WordNet.compileRegexPatterns(): could not compile \""
-                        + regexPatternStrings[i] + "\"");
-        }
-    }
-
-    /**
      * Returns the WordNet File object corresponding to key.
      *
      * @param key A descriptive literal String that maps to a regular
@@ -829,14 +745,14 @@ public class WordNet implements Serializable {
 
         //System.out.println("INFO in WordNet.processPointers(): " + pointers);
         // 0: p = Pattern.compile("^\\s*\\d\\d\\s\\S\\s\\d\\S\\s");
-        m = regexPatterns[0].matcher(pointers);
+        m = WordNetRegexPatterns.regexPatterns0.matcher(pointers);
         pointers = m.replaceFirst("");
         //System.out.println("INFO in WordNet.processPointers(): removed prefix: " + pointers);
 
         // Should be left with:
         // word  lex_id  [word  lex_id...]  p_cnt  [ptr...]  [frames...]
         // 1: p = Pattern.compile("^([a-zA-Z0-9'._\\-]\\S*)\\s([0-9a-f])\\s");
-        m = regexPatterns[1].matcher(pointers);
+        m = WordNetRegexPatterns.regexPatterns1.matcher(pointers);
         while (m.lookingAt()) {
             String word = m.group(1);
             //if (word.equals("roll"))
@@ -849,14 +765,14 @@ public class WordNet implements Serializable {
             //String count = m.group(2);
             addToSynsetsToWords(word, synset.substring(1), synset.substring(0, 1));
             pointers = m.replaceFirst("");
-            m = regexPatterns[1].matcher(pointers);
+            m = WordNetRegexPatterns.regexPatterns1.matcher(pointers);
         }
         //System.out.println("INFO in WordNet.processPointers(): removed words: " + pointers);
 
         // Should be left with:
         // p_cnt  [ptr...]  [frames...]
         // 2: p = Pattern.compile("^...\\s");
-        m = regexPatterns[2].matcher(pointers);
+        m = WordNetRegexPatterns.regexPatterns2.matcher(pointers);
         pointers = m.replaceFirst("");
 
         // Should be left with:
@@ -864,7 +780,7 @@ public class WordNet implements Serializable {
         // where ptr is
         // pointer_symbol  synset_offset  pos  source/target
         // 3: p = Pattern.compile("^(\\S\\S?)\\s([0-9]{8})\\s(.)\\s([0-9a-f]{4})\\s?");
-        m = regexPatterns[3].matcher(pointers);
+        m = WordNetRegexPatterns.regexPatterns3.matcher(pointers);
         while (m.lookingAt()) {
             String ptr = m.group(1);
             String targetSynset = m.group(2);
@@ -872,7 +788,7 @@ public class WordNet implements Serializable {
             //String sourceTarget = m.group(4);
             targetPOS = (Character.valueOf(WordNetUtilities.posLetterToNumber(targetPOS.charAt(0)))).toString();
             pointers = m.replaceFirst("");
-            m = regexPatterns[3].matcher(pointers);
+            m = WordNetRegexPatterns.regexPatterns3.matcher(pointers);
             ptr = WordNetUtilities.convertWordNetPointer(ptr);
             AVPair avp = new AVPair();
             avp.attribute = ptr;
@@ -895,10 +811,10 @@ public class WordNet implements Serializable {
             // f_cnt + f_num  w_num  [ +  f_num  w_num...]
             if (synset.charAt(0) == '2') {
                 // 4: p = Pattern.compile("^..\\s");
-                m = regexPatterns[4].matcher(pointers);
+                m = WordNetRegexPatterns.regexPatterns4.matcher(pointers);
                 pointers = m.replaceFirst("");
                 // 5: p = Pattern.compile("^\\+\\s(\\d\\d)\\s(\\d\\d)\\s?");
-                m = regexPatterns[5].matcher(pointers);
+                m = WordNetRegexPatterns.regexPatterns5.matcher(pointers);
                 while (m.lookingAt()) {
                     String frameNum = m.group(1);
                     String wordNum = m.group(2);
@@ -921,7 +837,7 @@ public class WordNet implements Serializable {
                         frames = verbFrames.get(key);
                     frames.add(frameNum);
                     pointers = m.replaceFirst("");
-                    m = regexPatterns[5].matcher(pointers);
+                    m = WordNetRegexPatterns.regexPatterns5.matcher(pointers);
                 }
             } else {
                 System.out.println("Error in WordNet.processPointers(): " +
@@ -1029,13 +945,13 @@ public class WordNet implements Serializable {
             lr = new LineNumberReader(r);
             while ((line = lr.readLine()) != null) {
                 // 8: p = Pattern.compile("(\\S+)\\s+(\\S+)");
-                m = regexPatterns[8].matcher(line);
+                m = WordNetRegexPatterns.regexPatterns8.matcher(line);
                 if (m.matches()) {
                     exceptionNounHash.put(m.group(1), m.group(2));      // 1-plural, 2-singular
                     exceptionNounPluralHash.put(m.group(2), m.group(1));
                 } else {
                     // 9: p = Pattern.compile("(\\S+)\\s+(\\S+)\\s+(\\S+)");
-                    m = regexPatterns[9].matcher(line);
+                    m = WordNetRegexPatterns.regexPatterns9.matcher(line);
                     if (m.matches()) {
                         exceptionNounHash.put(m.group(1), m.group(2));      // 1-plural, 2-singular 3-alternate singular
                         exceptionNounPluralHash.put(m.group(2), m.group(1));
@@ -1077,7 +993,7 @@ public class WordNet implements Serializable {
     protected boolean processNounLine(String line) {
 
         // 6: p = Pattern.compile("^([0-9]{8})([\\S\\s]+)\\|\\s([\\S\\s]+?)\\s(\\(?\\&\\%\\S+[\\S\\s]+)$");
-        m = regexPatterns[6].matcher(line);
+        m = WordNetRegexPatterns.regexPatterns6.matcher(line);
         boolean anyAreNull = false;
         if (m.matches()) {
             for (int i = 1; i < 5; i++) {
@@ -1094,7 +1010,7 @@ public class WordNet implements Serializable {
             }
         } else {
             // 7: p = Pattern.compile("^([0-9]{8})([\\S\\s]+)\\|\\s([\\S\\s]+)$");  // no SUMO mapping
-            m = regexPatterns[7].matcher(line);
+            m = WordNetRegexPatterns.regexPatterns7.matcher(line);
             if (m.matches()) {
                 nounDocumentationHash.put(m.group(1), m.group(3));
                 setMaxNounSynsetID(m.group(1));
@@ -1134,7 +1050,7 @@ public class WordNet implements Serializable {
                     System.out.print('.');
                 line = line.trim();
                 // 10: p = Pattern.compile("^([0-9]{8})([^\\|]+)\\|\\s([\\S\\s]+?)\\s(\\(?\\&\\%\\S+[\\S\\s]+)$");
-                m = regexPatterns[10].matcher(line);
+                m = WordNetRegexPatterns.regexPatterns10.matcher(line);
                 if (m.matches()) {
                     verbDocumentationHash.put(m.group(1), m.group(3));
                     setMaxVerbSynsetID(m.group(1));
@@ -1142,7 +1058,7 @@ public class WordNet implements Serializable {
                     processPointers("2" + m.group(1), m.group(2));
                 } else {
                     // 11: p = Pattern.compile("^([0-9]{8})([^\\|]+)\\|\\s([\\S\\s]+)$");   // no SUMO mapping
-                    m = regexPatterns[11].matcher(line);
+                    m = WordNetRegexPatterns.regexPatterns11.matcher(line);
                     if (m.matches()) {
                         verbDocumentationHash.put(m.group(1), m.group(3));
                         setMaxVerbSynsetID(m.group(1));
@@ -1172,7 +1088,7 @@ public class WordNet implements Serializable {
             lr = new LineNumberReader(r);
             while ((line = lr.readLine()) != null) {
                 // 12: p = Pattern.compile("(\\S+)\\s+(\\S+).*");
-                m = regexPatterns[12].matcher(line);  // TODO: Note we ignore more then one base form for a given tense
+                m = WordNetRegexPatterns.regexPatterns12.matcher(line);  // TODO: Note we ignore more then one base form for a given tense
                 if (m.matches()) {
                     exceptionVerbHash.put(m.group(1), m.group(2));          // 1-past/progressive, 2-root
                     if (m.group(1).endsWith("ing"))
@@ -1227,14 +1143,14 @@ public class WordNet implements Serializable {
                     System.out.print('.');
                 line = line.trim();
                 // 13: p = Pattern.compile("^([0-9]{8})([\\S\\s]+)\\|\\s([\\S\\s]+?)\\s(\\(?\\&\\%\\S+[\\S\\s]+)$");
-                m = regexPatterns[13].matcher(line);
+                m = WordNetRegexPatterns.regexPatterns13.matcher(line);
                 if (m.matches()) {
                     adjectiveDocumentationHash.put(m.group(1), m.group(3));
                     addSUMOMapping(m.group(4), "3" + m.group(1));
                     processPointers("3" + m.group(1), m.group(2));
                 } else {
                     // 14: p = Pattern.compile("^([0-9]{8})([\\S\\s]+)\\|\\s([\\S\\s]+)$");     // no SUMO mapping
-                    m = regexPatterns[14].matcher(line);
+                    m = WordNetRegexPatterns.regexPatterns14.matcher(line);
                     if (m.matches()) {
                         adjectiveDocumentationHash.put(m.group(1), m.group(3));
                         processPointers("3" + m.group(1), m.group(2));
@@ -1290,14 +1206,14 @@ public class WordNet implements Serializable {
                     System.out.print('.');
                 line = line.trim();
                 // 15: p = Pattern.compile("^([0-9]{8})([\\S\\s]+)\\|\\s([\\S\\s]+)\\s(\\(?\\&\\%\\S+[\\S\\s]+)$");
-                m = regexPatterns[15].matcher(line);
+                m = WordNetRegexPatterns.regexPatterns15.matcher(line);
                 if (m.matches()) {
                     adverbDocumentationHash.put(m.group(1), m.group(3));
                     addSUMOMapping(m.group(4), "4" + m.group(1));
                     processPointers("4" + m.group(1), m.group(2));
                 } else {
                     // 16: p = Pattern.compile("^([0-9]{8})([\\S\\s]+)\\|\\s([\\S\\s]+)$");   // no SUMO mapping
-                    m = regexPatterns[16].matcher(line);
+                    m = WordNetRegexPatterns.regexPatterns16.matcher(line);
                     if (m.matches()) {
                         adverbDocumentationHash.put(m.group(1), m.group(3));
                         processPointers("4" + m.group(1), m.group(2));
@@ -1383,7 +1299,7 @@ public class WordNet implements Serializable {
             while ((line = lr.readLine()) != null) {
                 line = line.trim();
                 // 17: Pattern p = Pattern.compile("^Word: ([^ ]+) Values: (.*)");
-                Matcher m = regexPatterns[17].matcher(line);
+                Matcher m = WordNetRegexPatterns.regexPatterns17.matcher(line);
                 if (m.matches()) {
                     String key = m.group(1);
                     String values = m.group(2);
@@ -1490,7 +1406,7 @@ public class WordNet implements Serializable {
             String line;
             while ((line = lr.readLine()) != null) {
                 // 18: Pattern p = Pattern.compile("([^%]+)%([^:]*):([^:]*):([^:]*):([^:]*):([^ ]*) ([^ ]+) ([^ ]+) .*");
-                m = regexPatterns[18].matcher(line);
+                m = WordNetRegexPatterns.regexPatterns18.matcher(line);
                 if (m.matches()) {
                     String word = m.group(1);
                     String pos = m.group(2);  // WN's ss_type
